--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Login activity layout - User authentication screen -->
 
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -8,9 +9,10 @@
     android:id="@+id/signInLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccent"
+    android:background="@color/accent"
     android:orientation="vertical">
 
+    <!-- Background image and advertisement container -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -18,6 +20,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <!-- Background image -->
         <ImageView
             android:id="@+id/signInImage"
             android:layout_width="match_parent"
@@ -29,6 +32,7 @@
             app:srcCompat="@drawable/back"
             tools:ignore="ContentDescription" />
 
+        <!-- AdMob advertisement banner -->
         <com.google.android.gms.ads.AdView
             android:id="@+id/signInAdmobView"
             android:layout_width="wrap_content"
@@ -43,6 +47,7 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <!-- Login form scrollable container -->
     <ScrollView
         android:id="@+id/signInScrollView"
         android:layout_width="match_parent"
@@ -52,12 +57,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <!-- Login form layout -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:orientation="vertical">
 
+            <!-- App title -->
             <TextView
                 android:id="@+id/signInTitle"
                 android:layout_width="wrap_content"
@@ -65,10 +72,11 @@
                 android:layout_marginTop="40dp"
                 android:layout_marginBottom="40dp"
                 android:text="@string/appName"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/primary"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
+            <!-- Email input field -->
             <EditText
                 android:id="@+id/fieldEmail"
                 android:layout_width="match_parent"
@@ -80,12 +88,13 @@
                 android:hint="@string/email"
                 android:inputType="textEmailAddress"
                 android:paddingStart="15dp"
-                android:textColor="@color/colorPrimary"
-                android:textColorHint="@color/colorGray"
+                android:textColor="@color/primary"
+                android:textColorHint="@color/gray"
                 android:textSize="16sp"
                 android:theme="@style/EditTextColorControl"
                 tools:ignore="RtlSymmetry" />
 
+            <!-- Password input field -->
             <EditText
                 android:id="@+id/fieldPassword"
                 android:layout_width="match_parent"
@@ -98,12 +107,13 @@
                 android:hint="@string/password_validate"
                 android:inputType="textPassword"
                 android:paddingStart="15dp"
-                android:textColor="@color/colorPrimary"
-                android:textColorHint="@color/colorGray"
+                android:textColor="@color/primary"
+                android:textColorHint="@color/gray"
                 android:textSize="16sp"
                 android:theme="@style/EditTextColorControl"
                 tools:ignore="RtlSymmetry" />
 
+            <!-- Login button -->
             <Button
                 android:id="@+id/emailSignInButton"
                 android:layout_width="match_parent"
@@ -113,10 +123,11 @@
                 android:layout_marginEnd="30dp"
                 android:background="@drawable/not_button"
                 android:text="@string/login"
-                android:textColor="@color/colorWhite"
+                android:textColor="@color/white"
                 android:textSize="16sp"
                 tools:ignore="ButtonStyle" />
 
+            <!-- Sign up button -->
             <Button
                 android:id="@+id/emailSignUpButton"
                 android:layout_width="match_parent"
@@ -126,10 +137,11 @@
                 android:layout_marginEnd="30dp"
                 android:background="@drawable/next_button"
                 android:text="@string/signup"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/primary"
                 android:textSize="16sp"
                 tools:ignore="ButtonStyle" />
 
+            <!-- Forgot password link -->
             <TextView
                 android:id="@+id/resetPasswordButton"
                 android:layout_width="wrap_content"
@@ -137,12 +149,13 @@
                 android:layout_marginTop="30dp"
                 android:gravity="center"
                 android:text="@string/forget_password"
-                android:textColor="@color/colorWhite"
+                android:textColor="@color/white"
                 android:textSize="16sp" />
 
         </LinearLayout>
     </ScrollView>
 
+    <!-- Loading progress overlay container -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -151,13 +164,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <!-- Loading progress indicator -->
         <ProgressBar
             android:id="@+id/progressBar"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_centerInParent="true"
             android:indeterminate="true"
-            android:indeterminateTint="@color/colorPrimary"
+            android:indeterminateTint="@color/primary"
             android:indeterminateTintMode="src_in"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
