--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Settings activity layout - App configuration screen -->
 
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -9,6 +10,7 @@
     android:layout_height="match_parent"
     tools:context=".SettingsActivity">
 
+    <!-- Settings fragment container -->
     <FrameLayout
         android:id="@+id/settings"
         android:layout_width="match_parent"
