--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Sign up activity layout - User registration screen -->
 
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -8,9 +9,10 @@
     android:id="@+id/signUpLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccent"
+    android:background="@color/accent"
     android:orientation="vertical">
 
+    <!-- AdMob advertisement banner -->
     <com.google.android.gms.ads.AdView
         android:id="@+id/signUpAdmobView"
         android:layout_width="wrap_content"
@@ -21,6 +23,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"></com.google.android.gms.ads.AdView>
 
+    <!-- Registration form scrollable container -->
     <ScrollView
         android:id="@+id/signUpScrollView"
         android:layout_width="match_parent"
@@ -30,12 +33,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <!-- Registration form layout -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:orientation="vertical">
 
+            <!-- Registration title -->
             <TextView
                 android:id="@+id/signUpTitle"
                 android:layout_width="wrap_content"
@@ -43,10 +48,11 @@
                 android:layout_marginTop="40dp"
                 android:layout_marginBottom="40dp"
                 android:text="@string/create_account"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/primary"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
+            <!-- Email input field -->
             <EditText
                 android:id="@+id/fieldEmail"
                 android:layout_width="match_parent"
@@ -58,12 +64,13 @@
                 android:hint="@string/email"
                 android:inputType="textEmailAddress"
                 android:paddingStart="15dp"
-                android:textColor="@color/colorPrimary"
-                android:textColorHint="@color/colorGray"
+                android:textColor="@color/primary"
+                android:textColorHint="@color/gray"
                 android:textSize="16sp"
                 android:theme="@style/EditTextColorControl"
                 tools:ignore="RtlSymmetry" />
 
+            <!-- Password input field -->
             <EditText
                 android:id="@+id/fieldPassword"
                 android:layout_width="match_parent"
@@ -76,12 +83,13 @@
                 android:hint="@string/password_validate"
                 android:inputType="textPassword"
                 android:paddingStart="15dp"
-                android:textColor="@color/colorPrimary"
-                android:textColorHint="@color/colorGray"
+                android:textColor="@color/primary"
+                android:textColorHint="@color/gray"
                 android:textSize="16sp"
                 android:theme="@style/EditTextColorControl"
                 tools:ignore="RtlSymmetry" />
 
+            <!-- Confirm password input field -->
             <EditText
                 android:id="@+id/fieldConfirmPassword"
                 android:layout_width="match_parent"
@@ -94,12 +102,13 @@
                 android:hint="@string/confirm_password"
                 android:inputType="textPassword"
                 android:paddingStart="15dp"
-                android:textColor="@color/colorPrimary"
-                android:textColorHint="@color/colorGray"
+                android:textColor="@color/primary"
+                android:textColorHint="@color/gray"
                 android:textSize="16sp"
                 android:theme="@style/EditTextColorControl"
                 tools:ignore="RtlSymmetry" />
 
+            <!-- Register button -->
             <Button
                 android:id="@+id/signUpRegisterButton"
                 android:layout_width="match_parent"
@@ -109,24 +118,27 @@
                 android:layout_marginEnd="30dp"
                 android:background="@drawable/not_button"
                 android:text="@string/register"
-                android:textColor="@color/colorWhite"
+                android:textColor="@color/white"
                 android:textSize="16sp"
                 tools:ignore="ButtonStyle" />
 
+            <!-- Privacy policy agreement container -->
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:orientation="horizontal">
 
+                <!-- Privacy policy checkbox -->
                 <CheckBox
                     android:id="@+id/signUpCheckBox"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
                     android:layout_gravity="center"
                     android:layout_margin="5dp"
-                    android:theme="@style/MyCheckBox" />
+                    android:theme="@style/CustomCheckBox" />
 
+                <!-- Privacy policy agreement text -->
                 <TextView
                     android:id="@+id/signUpPrivacyPolicy"
                     android:layout_width="wrap_content"
@@ -134,7 +146,7 @@
                     android:layout_gravity="center"
                     android:layout_margin="5dp"
                     android:text="@string/privacyPolicyAgree"
-                    android:textColor="@color/colorWhite"
+                    android:textColor="@color/white"
                     android:textSize="16sp" />
 
             </LinearLayout>
@@ -144,6 +156,7 @@
 
     </ScrollView>
 
+    <!-- Loading progress overlay container -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout2"
         android:layout_width="match_parent"
@@ -153,13 +166,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <!-- Loading progress indicator -->
         <ProgressBar
             android:id="@+id/progressBar"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_centerInParent="true"
             android:indeterminate="true"
-            android:indeterminateTint="@color/colorPrimary"
+            android:indeterminateTint="@color/primary"
             android:indeterminateTintMode="src_in"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
