--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <color name="colorPrimary">#3700B3</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
-    <color name="colorWhite">#FFFFFF</color>
-    <color name="colorGray">#808080</color>
-    <color name="colorLightGray">#D3D3D3</color>
-    <color name="colorBlack">#000000</color>
-    <color name="ColorRed">#FF0000</color>
-    <color name="ColorYellow">#FFFF00</color>
-
+    <!-- Application color definitions -->
+    <color name="primary">#3700B3</color>
+    <color name="accent">#03DAC5</color>
+    <color name="lightGray">#D3D3D3</color>
+    <color name="gray">#808080</color>
+    <color name="black">#000000</color>
+    <color name="red">#FF0000</color>
+    <color name="yellow">#FFFF00</color>
+    <color name="white">#FFFFFF</color>
+    <color name="transparent">#00000000</color>
 </resources>
